--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<h1>Portfolio</h1>
 				</a>
 				<div class="menu">
-					<a href="Home.html" class="menu">
+					<a href="index.html" class="menu">
 						<h3>Home</h3>
 					</a>
 					<a href="Ideal_Job.html" class="menu">
