--- a/Ideal_Job.html
+++ b/Ideal_Job.html
@@ -87,7 +87,7 @@
 					<h1>Portfolio</h1>
 				</a>
 				<div class="menu">
-					<a href="Home.html" class="menu">
+					<a href="index.html" class="menu">
 						<h3>Home</h3>
 					</a>
 					<a href="Ideal_Job.html" class="menu">
@@ -95,6 +95,9 @@
 					</a>
 					<a href="Projects.html" class="menu">
 						<h3>Projects</h3>
+					</a>
+					<a href="https://github.com/KCapeling/Portfolio" class="menu">
+						<h3>My GitHub</h3>
 					</a>
 				</div>
 			</div>
