--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<a href="Projects.html" class="menu">
 						<h3>Projects</h3>
 					</a>
-					<a href="https://github.com/KCapeling/Portfolio" class="menu">
+					<a href="https://github.com/KCapeling/Portfolio.git" class="menu">
 						<h3>My GitHub</h3>
 					</a>
 				</div>
