update all html upload

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			<div class="infobody"><!--Main body-->
 				<section id="MainContent">
 					<h2 class="title">My Interest in IT</h2>
-					<p class= ipara style="word-wrap: break-word;">What is your interest in it? When did it start? Was there a particular event or person that sparked your interest? Outline your experience.
+					<p class= ipara style="word-wrap: break-word;">
 					As far as I can remember I’ve always been into technology, pulling apart devices, looking through options on devices and figuring out how to use it. But the earliest memories with the PlayStation One then later when I was given my grand mothers old PC. Oddly even though I have been interested in tech from an early age I never thought of a career until Year 10 of high school when we were doing a resume/ job search activity for social studies and a classmate asked me what I was going to do and I couldn’t think od anything and they said jokingly id probably make video games. Which I had not considered once before that, Ever since then I have wanted to become a video game developer, My ideal job has changed since then and I now want to focus on games programming and my dream job would be to create my own games development company one day.
 					</p>
 					<h2 class="title">MBTI Results</h2>
@@ -130,7 +130,7 @@
 					<h2 class="title">Big 5 Personality Test</h2>
 					<div><img src="Big-5-Personality.PNG" style="align-content: center;"></div>
 					<a href="http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml">
-						<p>Take the Big 5 Personalities Test Here</p>
+						<p></p>
 					</a>
 					<p class= ipara>Personality Test results will go here</p>
 				</section>
