update all html upload

--- a/Ideal_Job.html
+++ b/Ideal_Job.html
@@ -117,7 +117,7 @@
 				<section id="MainContent">
 					<h2 class="title">My Ideal Job</h2>
 					<p class= ipara>This isnt exactly my dream dream job but its where i would like to be before branching of to my dream job</p>
-					<div><img src="Job-Listing.png"></div>
+					<div><img src="Job-Listing.PNG"></div>
 				</section>
 			</div>
 		</div>
