update all html upload

--- a/Ideal_Job.html
+++ b/Ideal_Job.html
@@ -116,8 +116,8 @@
 			<div class="infobody"><!--Main body-->
 				<section id="MainContent">
 					<h2 class="title">My Ideal Job</h2>
-					<p class= ipara>This isnt exactly my dream dream job but its where i would like to be before branching of to my dream job</p>
-					<div><img src="Job-Listing.PNG"></div>
+					<p class= ipara>This isnt exactly my dream dream job but I would like to have some experience in a job much like this before branching off to make my own game development company.</p>
+					<div style="float: right"><img src="Job-Listing.PNG"></div>
 				</section>
 			</div>
 		</div>
