--- a/Ideal_Job.html
+++ b/Ideal_Job.html
@@ -117,7 +117,7 @@
 				<section id="MainContent">
 					<h2 class="title">My Ideal Job</h2>
 					<p class= ipara>This isnt exactly my dream dream job but I would like to have some experience in a job much like this before branching off to make my own game development company.</p>
-					<div style="float: right"><img src="Job-Listing.PNG"></div>
+					<div><img src="Job-Listing.PNG"></div>
 				</section>
 			</div>
 		</div>
