--- a/Projects.html
+++ b/Projects.html
@@ -116,6 +116,11 @@
 			<div class="infobody"><!--Main body-->
 				<section id="MainContent">
 					<h2 class="title">Projects</h2>
+					<div>
+						<ul>
+							<li><p src="Tech_Idea.pdf">My Application Idea</p></li><!--Ill disable the link to open as im uploading it through the assessment link-->
+						</ul>
+					</div>
 				</section>
 			</div>
 		</div>
