--- a/Projects.html
+++ b/Projects.html
@@ -118,7 +118,7 @@
 					<h2 class="title">Projects</h2>
 					<div>
 						<ul>
-							<li><p src="Tech_Idea.pdf">My Application Idea</p></li><!--Ill disable the link to open as im uploading it through the assessment link-->
+							<li><p ahref="Tech_Idea.pdf">My Application Idea</p></li><!--Ill disable the link to open as im uploading it through the assessment link-->
 						</ul>
 					</div>
 				</section>
