--- a/Ideal_Job.html
+++ b/Ideal_Job.html
@@ -118,7 +118,7 @@
 					<h2 class="title">My Ideal Job</h2>
 					<p class= ipara>This isnt exactly my dream dream job but I would like to have some experience in a job much like this before branching off to make my own game development</p>
 					<p class="ipara">https://www.seek.com.au/job/56123237?type=standout#sol=15db7665af401c650504306383917cf39a08975e</p>
-					<div style="float: right"><img src="Job-Listing.PNG"></div>
+					<div style="float: left"><img src="Job-Listing.PNG"></div>
 				</section>
 			</div>
 		</div>
