--- a/index.html
+++ b/index.html
@@ -130,9 +130,8 @@
 					<h2 class="title">Big 5 Personality Test</h2>
 					<div><img src="Big-5-Personality.PNG" style="align-content: center;"></div>
 					<a href="http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml">
-						<p></p>
+						<p>Personality Test Link</p>
 					</a>
-					<p class= ipara>Personality Test results will go here</p>
 				</section>
 			</div>
 		</div>
