Update for all html files

--- a/Ideal_Job.html
+++ b/Ideal_Job.html
@@ -82,7 +82,7 @@
 	<body>
 		<Header>
 			<div class="innerheader"><!--Header div-->
-				<a href="https://kcapeling.github.io/Personal-Profile/" style="text-decoration: none;font-size: 20px">
+				<a href="index.html" style="text-decoration: none;font-size: 20px">
 					<h1>My</h1>
 					<h1>Portfolio</h1>
 				</a>
@@ -117,7 +117,9 @@
 				<section id="MainContent">
 					<h2 class="title">My Ideal Job</h2>
 					<p class= ipara>This isnt exactly my dream dream job but I would like to have some experience in a job much like this before branching off to make my own game development</p>
-					<p class="ipara">https://www.seek.com.au/job/56123237?type=standout#sol=15db7665af401c650504306383917cf39a08975e</p>
+					<a href="https://www.seek.com.au/job/56123237?type=standout#sol=15db7665af401c650504306383917cf39a08975e">
+						<p class="ipara">Job Listing Here</p>
+					</a>
 					<div style="float: left"><img src="Job-Listing.PNG"></div>
 				</section>
 			</div>
