--- a/index.html
+++ b/index.html
@@ -57,12 +57,8 @@
 			.mainheadline{
 				text-decoration: none;
 			}
-			.ipara{
-				text-align: center;
-				padding-left: 30px;
-				width: 600px;
-				word-wrap: break-word;
-			}
+			
+			
 			.menu{
 				display: flex;
 				margin-left: 55px;
@@ -82,7 +78,7 @@
 	<body>
 		<Header>
 			<div class="innerheader"><!--Header div-->
-				<a href="" style="text-decoration: none;font-size: 20px">
+				<a href="index.html" style="text-decoration: none;font-size: 20px">
 					<h1>My</h1>
 					<h1>Portfolio</h1>
 				</a>
@@ -119,18 +115,24 @@
 					<p class= ipara style="word-wrap: break-word;">
 					As far as I can remember I’ve always been into technology, pulling apart devices, looking through options on devices and figuring out how to use it. But the earliest memories with the PlayStation One then later when I was given my grand mothers old PC. Oddly even though I have been interested in tech from an early age I never thought of a career until Year 10 of high school when we were doing a resume/ job search activity for social studies and a classmate asked me what I was going to do and I couldn’t think od anything and they said jokingly id probably make video games. Which I had not considered once before that, Ever since then I have wanted to become a video game developer, My ideal job has changed since then and I now want to focus on games programming and my dream job would be to create my own games development company one day.
 					</p>
-					<h2 class="title">MBTI Results</h2>
+					<h2 class="title">16 Personalities Test</h2>
 					<p class= ipara style=" margin-bottom: 0">Personality type: Virtuoso (ISTP-A)</p>
 					<p class= ipara style="margin-top: 0">
 					Traits: Introverted – 90%, Observant – 57%, Thinking – 68%, Prospecting – 83%, Assertive – 54% Role: Explorer Strategy: Confident Individualism</p>
+					<a href="https://www.16personalities.com/free-personality-test">
+						<p>Take the 16 Personalities Test </p>
+					</a>
 					<h2 class="title">Learning Style Test</h2>
 					<p class= ipara style="margin-bottom: 0">Learning Test Results:</p>
 					<p class= ipara style="margin-top: 0">Auditory: 25%;  Visual: 45%;  Tactile: 30%</p>
-					<p class= ipara>Overall I am a Visual Learner</p>
+					<p class= ipara>The test states that I am visual learner and i agree with its ruling, I preffer to watch videos on a subject then read a book and next inline would be to get my hands on what ever it is i am trying to learn instead of getting infromation from a book</p>
+					<a href="http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml">
+					<p>You can take the Learning Style Test</p>
+					</a>
 					<h2 class="title">Big 5 Personality Test</h2>
 					<div><img src="Big-5-Personality.PNG" style="align-content: center;"></div>
-					<a href="http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml">
-						<p>Personality Test Link</p>
+					<a href="https://my-personality-test.com/ ">
+						<p>Take The Personality Test Here</p>
 					</a>
 				</section>
 			</div>
