--- a/Projects.html
+++ b/Projects.html
@@ -40,7 +40,7 @@
 				display: vertical;
 				font-size: 16px;
 				color: black;
-				background-color: orange;
+				background-color: limegreen;
 				align-items: centre;
 				flex: 1;
 				height: 100vh;
@@ -82,7 +82,7 @@
 	<body>
 		<Header>
 			<div class="innerheader"><!--Header div-->
-				<a href="https://kcapeling.github.io/Personal-Profile/" style="text-decoration: none;font-size: 20px">
+				<a href="index.html" style="text-decoration: none;font-size: 20px">
 					<h1>My</h1>
 					<h1>Portfolio</h1>
 				</a>
