Remove report and update projects.html

--- a/Projects.html
+++ b/Projects.html
@@ -118,12 +118,11 @@
 					<h2 class="title">Projects</h2>
 					<div>
 						<ul>
-							<li><a href="Tech_Idea.pdf"><p style="text-align: left">My Application Idea</p></a></li><!--Ill disable the link to open as im uploading it through the assessment link-->
+							<li><a href="Tech_Idea.pdf"><p style="text-align: left">My Application Idea (Link Currently Unavailable)</p></a></li><!--Ill disable the link to open as im uploading it through the assessment link-->
 						</ul>
 					</div>
 				</section>
 			</div>
 		</div>
 	</body>
-
 </html>
