--- a/Ideal_Job.html
+++ b/Ideal_Job.html
@@ -57,12 +57,6 @@
 			.mainheadline{
 				text-decoration: none;
 			}
-			.ipara{
-				align-items: center;
-				padding-left: 30px;
-				width: 600px;
-				word-wrap: break-word;
-			}
 			.menu{
 				display: flex;
 				margin-left: 55px;
@@ -70,9 +64,7 @@
 				align-items: center;
 				max-width: 100vh;
 			}
-			.ipara{
 
-			}
 			h1{
 				margin: 0;
 			}
@@ -116,11 +108,14 @@
 			<div class="infobody"><!--Main body-->
 				<section id="MainContent">
 					<h2 class="title">My Ideal Job</h2>
-					<p class= ipara>This isnt exactly my dream dream job but I would like to have some experience in a job much like this before branching off to make my own game development</p>
+					<p class= ipara>This isnt exactly my dream dream job but I would like to have some experience in a job much like this before branching off to make my own game development.
+					The listing states that skills such as Communication skills, the ability to work from home during covid and at least 5 years experience with C# and C++. Skills such as Animation programming, Networking and Experi4ence with Unreal Engine would be a bonus.</p>
+					<p class="ipara">I am far off of these requirements as i have little to no successful experience with C# or C++ and have little experience with Unreal. I am how ever currently working on my own small game with C# in Unity so i am working toward some experince with some of these requirments.</p>
+					<p class="ipara">I can gain more experiance by continuing to work on this degree, My own projects and persue independent study oin these and similar skill sets.</p>
 					<a href="https://www.seek.com.au/job/56123237?type=standout#sol=15db7665af401c650504306383917cf39a08975e">
 						<p class="ipara">Job Listing Here</p>
 					</a>
-					<div style="float: left"><img src="Job-Listing.PNG"></div>
+					<div"><img src="Job-Listing.PNG"></div>
 				</section>
 			</div>
 		</div>
