--- a/index.html
+++ b/index.html
@@ -115,6 +115,12 @@
 					<p class= ipara style="word-wrap: break-word;">
 					As far as I can remember I’ve always been into technology, pulling apart devices, looking through options on devices and figuring out how to use it. But the earliest memories with the PlayStation One then later when I was given my grand mothers old PC. Oddly even though I have been interested in tech from an early age I never thought of a career until Year 10 of high school when we were doing a resume/ job search activity for social studies and a classmate asked me what I was going to do and I couldn’t think od anything and they said jokingly id probably make video games. Which I had not considered once before that, Ever since then I have wanted to become a video game developer, My ideal job has changed since then and I now want to focus on games programming and my dream job would be to create my own games development company one day.
 					</p>
+					<p class="ipara">
+						I’ll be honest I didn’t pick RMIT because of any perticular reason, I enrolled through Open Universities and RMIT had the only courses I was interested in starting soon, but just in the three weeks I’ve been studying, the content is a lot better than another university I was enrolled in previously.
+					</p>
+					<p class="ipara">
+						I would like to gain a solid platform in which continue my studies and launch into the video game development world and hopefully studying this degree will give me a better idea of the skills I need to develop and improve upon.
+					</p>
 					<h2 class="title">16 Personalities Test</h2>
 					<p class= ipara style=" margin-bottom: 0">Personality type: Virtuoso (ISTP-A)</p>
 					<p class= ipara style="margin-top: 0">
